--- a/v2/http/templates/layouts/base.html
+++ b/v2/http/templates/layouts/base.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>{{ block "title" . }} Chatupp! {{ end }}</title>
+		<title>{{ block "title" . }} Shitty chatter {{ end }}</title>
 		<link
 			href="/public/css/bootstrap/bootstrap.min.css"
 			rel="stylesheet"
