--- a/v2/http/templates/pages/chat.html
+++ b/v2/http/templates/pages/chat.html
@@ -1,4 +1,4 @@
-{{ define "title" }} Chat {{ end }}
+{{ define "title" }} Shitty chatter {{ end }}
 
 {{ define "stylesheets"}}
 <link rel="stylesheet" href="/public/css/chat.css" />
