--- a/http/templates/pages/index.html
+++ b/http/templates/pages/index.html
@@ -3,10 +3,10 @@
 {{ define "content" }}
 <div class="container">
 	<h1>Welcome to Shitty chatter</h1>
-	<h2>This is just me learning to build realtime chat applications
-	with go, my favorite new language.</h2>
-	<h3>This is a demo project, I will be improving it periodically ( i.e if i feel like), so it is not a complete chat application (don't look down on my skills future employer :( ). Don't also complain that it's not an SPA
-	i hate SPAs.</h3>
+	<p>This is just me learning to build realtime chat applications
+	with go, my favorite new language.</p>
+	<p>This is a demo project, I will be improving it periodically ( i.e if i feel like), so it is not a complete chat application (don't look down on my skills future employer :( ). Don't also complain that it's not an SPA
+	i hate SPAs.</p>
 	{{ if .user }}
 	<a href="/rooms">See your available rooms.</a>
 	{{ else }}
