--- a/http/templates/layouts/base.html
+++ b/http/templates/layouts/base.html
@@ -26,7 +26,7 @@
 		{{ end }}
 		<script src="/public/js/lib/jquery.min.js"></script>
 		<script src="/public/js/lib/moment.min.js"></script>
-		<script src="/public/js/lib/bootstrap/bootstrap.min.js"></script>
+		<script src="/public/js/lib/bootstrap/bootstrap.bundle.min.js"></script>
 		{{block "scripts" .}} {{ end }}
 	</body>
 </html>{{ end }}
